added content to slime hunter page

--- a/about.html
+++ b/about.html
@@ -27,13 +27,35 @@
             </ul>
         </div>
     </header>
-    <div>
-        <img style="height: 10%; width: 30%; margin-top: 10px; border: 2px solid black; box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.3);"
-            src="images/itsme.png">
-        <h2 style="text-align: center;">About Me</h2>
-        <p>
-
-        </p>
+    <div class="row">
+        <div class="column left">&nbsp;</div>
+        <div class="column middle">
+            <img style="height: 10%; width: 30%; margin-top: 10px; border: 2px solid black; box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.3);"
+                src="images/itsme.png">
+            <h2 style="text-align: center;">About Me</h2>
+            <p>
+                As the name of this website would suggest, my name is Kale Harris. I was 
+                born in 1997 in the state of Idaho in the good old U.S.A. My favorite past
+                time is playing video games (big surprise, I know), but I also enjoy going out to play
+                disc golf or sometimes even regular golf. Also, I like to meet up with a couple
+                groups of friends every week to play some Dungeons and Dragons. <br>
+                During my time in high school, I had an interest in Engineering and took a
+                few classes that gave college credit to get a head start down that path. This
+                is also how I discovered that I don't like Engineering at all, and took a 
+                year in college with an undeclared major to explore different avenues and 
+                still fill in core class requirements in the mean time. <br>
+                That is when I eventually found my way to the Games, Interactive Media, and Mobile
+                Technology (GIMM) major. What I liked most about the major is that it provides
+                students with a portfolio of work right out of college, so that they have something
+                to show potential employers as proof that students can do what they claim. I was
+                also drawn to the versatility of the knowledge students gain. There are many
+                avenues we could take: software development, game development, web development,
+                fields involving user experience, digital artistry, or most anything that
+                involves the front end side of projects.<br>
+                What the major overall tried to prepare us best
+            </p>
+        </div>
+        <div class="column right">&nbsp;</div>
     </div>
 </body>
 
