--- a/project-pages/slime-hunter.html
+++ b/project-pages/slime-hunter.html
@@ -27,6 +27,50 @@
             </ul>
         </div>
     </header>
+    <div class="row">
+        <div class="column left">&nbsp;</div>
+        <div class="column middle">
+            <h2>Summary</h2>
+            <p>
+                Slime Hunter is a simple virtual reality game created within about 2-3 months by
+                myself and 3 others as a group project. This project was unique in the way that
+                each of us were switching roles between months in the semester. That is to say,
+                one person was Project Lead, another was Digital Artist, another was Lead
+                Developer/Secondary Tester, and finally Lead Tester/Secondary Developer. The
+                intention of structuring the class this way was to give us perspective for each
+                role in a real development environment. Originally, we were supposed to make a new
+                project each time we switched roles and were given a basic objective to follow for each
+                new project. For example, the first objective was to create a game using a state machine.
+                However, with our professor's permission, we decided to keep upgrading the same project
+                each month and apply any new objectives to it. Thus, Slime Hunter as it is today was the result.<br>
+                The game itself is a simple concept. The player is tasked with hunting down pink slimes
+                with a sword (or two) to collect slime fuel. Initially, we wanted to have the player desposit
+                said fuel into a sort of generator, but that was cut due to time constraints. The player
+                is placed in a transparent maze with color coded doors that can be opened or closed.
+                Slimes will spawn in the maze randomly and wander around, as well as 2 spiky 
+                enemies which will attempt to ram into and disrupt the player. See the gameplay demo
+                below for more.
+            </p>
+            <!--Gameplay Demo Video Here-->
+            <h2>My Contribution</h2>
+            <p>
+                Due to the way our roles rotated around, my contribution to Slime Hunter took isn't
+                quite as immediately visible to someone playing the game. I was Project Lead for 
+                the first month, and at that point we were still trying to figure out what a Project
+                Lead should be doing. That mostly consisted of keeping the others organized and
+                accountable for getting their work done each week, and writing and presenting the
+                GDD and the project at the end of the month. Next, I was the Lead Tester/Secondary 
+                Developer, so I found the most productive thing I could do during that time - aside
+                from testing the game when needed - was to create the maze the player navigates and
+                program the color coded doors. When the third role change cycle came around, we decided
+                to finally move on to a new project, as the objective would be to add multiplayer and 
+                we felt that wouldn't work for what Slime Hunter was supposed to be. Before the role
+                switch, we took some time to make the game look a bit more pretty; I added materials
+                to the maze, others added music, sound, and the skybox.
+            </p>
+        </div>
+        <div class="column right">&nbsp;</div>
+    </div>
 </body>
 
 </html>
